[package]
name = "ltxcut"
version = "0.1.0"
authors = ["Jan Starke <Jan.Starke@outofbed.org>"]
edition = "2018"
description = "formats a table-like stream into a LaTeX-table"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
string-builder = "0.2.0"
